--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../base
-patchesStrategicMerge:
-  - deployment.yaml
-  - service.yaml
+- ../base
 namespace: instavote
+patches:
+- path: deployment.yaml
+- path: service.yaml
