--- a/deploy/nano-project/base/worker/deployment.yaml
+++ b/deploy/nano-project/base/worker/deployment.yaml
@@ -18,4 +18,6 @@ spec:
       containers:
       - image: schoolofdevops/worker:latest
         name: worker
-        resources: {}
+        env:
+          - name: REDIS_HOST
+            value: redis
